K3d/ingressService/theingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc0080
            port:
              number: 80
  - host: svc0080.tarso.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc0080
            port:
              number: 80
  - host: svc8080.tarso.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc8080
            port:
              number: 8080
